Scrollbar bug opgelost scrollen was niet mogelijk en cellspacing van table op 0 gezet

--- a/public/css/mediaquery.css
+++ b/public/css/mediaquery.css
@@ -37,7 +37,7 @@
         overflow-y: auto;
 
     }
-    ::-webkit-scrollbar {
+    .uren-mob-invullen::-webkit-scrollbar {
         display: none;
     }
     .ac-container{
